erDiagram
    ProjectDocument {
        int project_id PK
        int document_id FK
        string project_name_th
        string project_name_en
        enum project_type "govern|private|research"
        string track
        int advisor_id FK
        int co_advisor_id FK
        enum status "draft|advisor_assigned|in_progress|completed|archived|cancelled"
        int academic_year
        int semester
        text objective
        text background
        text scope
        text expected_outcome
        text methodology
        text tools
        string project_code UK "PRJ-YYYY-NNNN"
        enum exam_result "passed|failed"
        boolean submitted_late
        int submission_delay_minutes
        int important_deadline_id FK
    }

    ProjectMember {
        int project_id PK_FK
        int student_id PK_FK
        enum role "leader|member"
        datetime joined_at
    }

    ProjectTrack {
        int project_track_id PK
        int project_id FK
        enum track_code "NETSEC|WEBMOBILE|SMART|AI|GAMEMEDIA"
    }

    ProjectMilestone {
        int milestone_id PK
        int project_id FK
        string title
        date due_date
        int progress "0-100"
        enum status "pending|submitted|accepted|rejected"
        text feedback
        datetime submitted_at
    }

    ProjectArtifact {
        int artifact_id PK
        int project_id FK
        string type
        string file_path
        string original_name
        string mime_type
        int size
        int version
        int uploaded_by_student_id FK
        string checksum
    }

    ProjectEvent {
        int event_id PK
        int project_id FK
        string event_type
        string actor_role
        int actor_user_id
        json meta_json
        datetime created_at
    }

    ProjectDocument ||--o{ ProjectMember : "has members"
    ProjectDocument ||--o{ ProjectTrack : "has tracks"
    ProjectDocument ||--o{ ProjectMilestone : "has milestones"
    ProjectDocument ||--o{ ProjectArtifact : "has artifacts"
    ProjectDocument ||--o{ ProjectEvent : "has events"
    ProjectMember }o--|| Student : "is student"
    ProjectDocument }o--|| Teacher : "advisor"
    ProjectDocument }o--o| Teacher : "co-advisor"
    ProjectDocument }o--|| Document : "base document"
